[tool.poetry]
name = "twinspect"
version = "0.1.0"
description = ""
authors = ["Titusz <tp@py7.de>"]
readme = "README.md"

[tool.poetry.scripts]
twinspect = 'twinspect.__main__:app'

[tool.poetry.dependencies]
python = "^3.11"
remotezip = "^0.12.1"
datamodel-code-generator = "^0.18.0"
poethepoet = "^0.19.0"
rich = "^13.3.4"
loguru = "^0.6"
python-dotenv = "^1.0.0"
pydub = "^0.25.1"
codetiming = "^1.4.0"
blake3 = "^0.3.3"
pandas = "^2.0.1"
hexhamming = "^2.2.3"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
more-itertools = "^9.1.0"
httpx = "^0.24.0"
typer = "^0.9.0"
tqdm = "^4.65.0"
faiss-cpu = "^1.7.4"
httpx-cache = "^0.9.0"
ruamel-yaml = "^0.17.24"
mkdocs-material = "^9.1"
mdformat = "*"
mdformat-gfm = "*"
mdformat-tables = "*"
mdformat-config = "*"
mdformat-black = "*"
mdformat-web = "*"
mdformat-toc = "*"
mdformat_footnote = "*"
mdformat_frontmatter = "*"
mdformat_deflist = "*"
mkdocs-git-revision-date-localized-plugin = "*"
mkdocs-add-number-plugin = "*"
mkdocs-glightbox = "*"
jinja2 = "^3.1.2"
plotext = "^5.2.8"


[tool.datamodel-codegen]
input = "twinspect/schema.yml"
output = "twinspect/schema.py"
input-file-type = "openapi"
encoding = "UTF-8"
disable-timestamp = true
target-python-version = "3.11"

[tool.black]
skip-string-normalization = false
line-length = 100
target-version = ['py311']

[tool.poe.tasks]
format-yaml = { script = "twinspect.dev:format_yml", help = "Format all yaml files"}
validate-schema = { cmd = "openapi-spec-validator twinspect/schema.yml", help = "Validate OpenAPI Schema"}
generate-code = { cmd = "datamodel-codegen", help="Build code from OpenAPI Schema"}
format-code = { cmd = "poetry run black .", help = "Code style formating with black" }
format-md = { script = "twinspect.dev:format_md", help = "Markdown formating with mdformat" }
fix-line-endings = { script = "twinspect.dev:fix_line_endings", help = "Convert line endings to LF"}
all = ["format-yaml", "validate-schema", "generate-code", "format-code", "format-md", "fix-line-endings"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
