[project]
name = "twinspect"
version = "0.1.0"
description = ""
authors = [{ name = "Titusz", email = "tp@py7.de" }]
requires-python = ">=3.11,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "remotezip",
    "datamodel-code-generator",
    "poethepoet",
    "rich",
    "loguru",
    "python-dotenv",
    "pydub",
    "codetiming",
    "blake3",
    "pandas",
    "hexhamming",
    "matplotlib",
    "more-itertools",
    "httpx",
    "typer",
    "faiss-cpu",
    "ruamel-yaml",
    "mkdocs-material",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-glightbox",
    "jinja2",
    "jmespath",
    "mdformat-mkdocs[recommended]",
    "iscc-sdk",
    "hishel>=1.1.8",
    "openapi-spec-validator",
    "ruff",
    "pillow-avif-plugin",
    "iscc-sci>=0.2.0",
    "onnxruntime-gpu>=1.23.2",
]

[project.scripts]
twinspect = "twinspect.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.datamodel-codegen]
input = "twinspect/schema.yml"
output = "twinspect/schema.py"
input-file-type = "openapi"
encoding = "UTF-8"
disable-timestamp = true
target-python-version = "3.11"
formatters = ["ruff-format", "ruff-check"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.poe.tasks]
format-yaml = { script = "twinspect.dev:format_yml", help = "Format all yaml files"}
validate-schema = { cmd = "openapi-spec-validator twinspect/schema.yml", help = "Validate OpenAPI Schema"}
generate-code = { cmd = "datamodel-codegen", help="Build code from OpenAPI Schema"}
format-code = { cmd = "ruff format .", help = "Code style formatting with ruff" }
format-md = { script = "twinspect.dev:format_md", help = "Markdown formating with mdformat" }
fix-line-endings = { script = "twinspect.dev:fix_line_endings", help = "Convert line endings to LF"}
all = ["format-yaml", "validate-schema", "generate-code", "format-code", "format-md", "fix-line-endings"]

[dependency-groups]
dev = [
    "usearch>=2.23.0",
]
